turtleart.smallsquare.SmallSquare.scala.error
Erreur de compilation :
SmallSquare:1: error: illegal start of statement (no modifiers allowed here)
override def run() {override def run() {baisseCrayon();for (i<- 1 to 4 )
                    ^